overflow bugfix

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -9,10 +9,12 @@ header {
     padding: 1.4rem;
   }
 
-  .logo-mobile img {
+  .logo-mobile {
     display: none;
     @include phone {
       display: block;
+    }
+    img {
       width: 70px;
       height: 70px;
     }
