--- a/src/css/default/_default.scss
+++ b/src/css/default/_default.scss
@@ -21,7 +21,7 @@ body {
   }
 
   &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px $color-secondary;
+    background-color: $color-primary-dark;
   }
 
   &::-webkit-scrollbar-thumb {
